--- a/README/readability.html
+++ b/README/readability.html
@@ -1224,7 +1224,8 @@ $('body,html').animate({scrollTop: 0},);
         scheme: loc.protocol.substr(0, loc.protocol.indexOf(":")),
         pathBase: loc.protocol + "//" + loc.host + loc.pathname.substr(0, loc.pathname.lastIndexOf("/") + 1)
     };
-    var article = new Readability(uri, document).parse();
+    var article = new Readability(uri, document, {debug: true}).parse();
+    console.log(article)
 </script>
 
 </body><!--#body end-->
