--- a/README/readability.html
+++ b/README/readability.html
@@ -59,6 +59,7 @@
 
 <body id="body">
 <div id="alllayout" class="app app-aside-fixed container app-header-fixed ">    <!-- header -->
+    hello
     <header id="header" class="app-header navbar" role="menu">
         <!-- navbar header（交集处） -->
         <div class="navbar-header bg-info dker">
@@ -343,9 +344,9 @@
                 <noscript>test</noscript>
                 <style>.xxx {
                 }</style>
-                <div><p>xxxx</p></div>
-                <div><p>xxxx</p><b></b></div>
-                <div><p>xxxx</p> xxx</div>
+                <div class="d1"><p>xxxx</p></div>
+                <div class="d2"><p>xxxx</p><b></b></div>
+                <div class="d3"><p>xxxx</p> xxx</div>
                 <!-- 解析测试 -->
 
                 <!--文章-->
@@ -1079,7 +1080,7 @@
 								</span>
         <b class="{{ color.navbarHeader }} header"></b>
         <b class="{{ color.navbarCollapse }} header"></b>
-        <b class="{{ color.aside.replace( ' b-r', '' ) }}"></b>
+        <b class="{{ color.aside.replace( ' br', '' ) }}"></b>
 </span>
 </label>
     <#
